# ansible-cloudy

./: .claude-code.json  .gitignore  .test-vault.yml  CLAUDE.md  CLAUDIA_ENHANCE.md  CONTRIBUTING.md  FLOW.md  FLOW_STEPS.md  FLOW_STEPS_PGPOOL2.md  IMPLEMENTATION_PLAN.md  README.md  USAGE.md  ali  ansible.cfg  bootstrap.sh  claudia  pyproject.toml  requirements.yml
.claude/: README.md  settings.json  settings.local.json
.claude/commands/: all_tools.md  dev.md  development.md  git_status.md  prime.md  principles.md  sentient.md
.claude/hooks/: development-hooks.json
.claude/scripts/: optimize_claude_config.py
.claude/templates/: optimization-review.md
.githooks/: install-hooks.sh  pre-commit  pre-push
.github/workflows/: test.yml
.secrets/: README.md  ci.yml  ci.yml.example  dev.yml  dev.yml.example  prod.yml  prod.yml.example  production.yml  production.yml.template  staging.yml  staging.yml.template  test-unencrypted.yml  vault.yml.template
.vault/: README.md  ci.yml.example  dev.yml.example  prod.yml.example
cloudy/defaults/: README.md  all.yml  container.yml  docker.yml  nginx.yml  nodejs.yml  openvpn.yml  pgbouncer.yml  postgis.yml  postgresql.yml  redis.yml  security.yml  system.yml  vault.yml  vpn.yml
container/: IMPLEMENTATION.md  prepare-n8n-deployment.sh
dev/: .ansible-lint.yml  .cspell.json  .flake8  .yamlint.yml  README.md  test-auth.yml  validate.py
docs/: CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  README.md  SECRETS.md  TESTS.md  USAGE.md
group_vars/: all.yml  webservers.yml
logs/: agent.json  chat.json  notification.json  post_tool_use.json  pre_tool_use.json  stop.json
playbooks/: database-server.yml  server-baseline.yml  web-server.yml
scripts/: README.md  bootstrap.sh  create-pr.sh  deploy.sh
test/: README.md
(+370 files in other folders)
